build: migrate the build to sbt 2
sbt 2 compiles .sbt files with Scala 3, changes a few core APIs and requires
JDK 17, so the workflow now builds on temurin@17:

- %%% becomes %%, which is platform-aware in sbt 2. sbt-platform-deps, which
  only existed to provide %%%, is not published for sbt 2 because it is no
  longer needed. The IDE hint that used to read platformDepsCrossVersion now
  reads the platform setting instead.
- scalaz-concurrent is only published for the JVM and the JS and Native builds
  of cats-effect do not expose unsafeRunSync, so those dependencies keep
  resolving to their JVM artifacts, as they did with sbt 1.
- coreDefaultSettings is dropped: every project already has those settings and
  re-applying them puts the build outputs outside the directory sbt 2 caches.
- test is now incremental and returns a TestResult, so the workflow runs
  testOnly * to make sure the whole suite is executed.
- task results have to be serialisable to be cached, hence Def.uncached for
  packagedArtifacts.
- licenses holds License values instead of name and URL pairs, and the ghpages
  mappings are virtual file references which need converting before they can
  be copied.

Building on JDK 17 also means pegdown can no longer reflect into the class
loader to build its parser, so the forked test JVM opens java.lang for it.

Signed-off-by: Eric Torreborre <etorreborre@yahoo.com>